// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[EditText] interactions Type: [column] renders custom styles without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "#00000050",
            "borderBottomWidth": 0.5,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          Object {},
        ],
        false,
        Object {
          "borderBottomColor": "#00000050",
          "borderColor": "#00000050",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "#222222",
              "fontSize": 14,
              "fontWeight": "bold",
              "paddingVertical": 12,
            },
            Object {},
          ],
          Object {},
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`[EditText] interactions Type: [column] renders without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "#00000050",
            "borderBottomWidth": 0.5,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderBottomColor": "#00000050",
          "borderColor": "#00000050",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "#222222",
              "fontSize": 14,
              "fontWeight": "bold",
              "paddingVertical": 12,
            },
            undefined,
          ],
          undefined,
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`[EditText] interactions Type: [row] - default should render without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderBottomColor": "#00000050",
            "borderBottomWidth": 0.5,
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderBottomColor": "#00000050",
          "borderColor": "#00000050",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "#222222",
              "flex": 1,
              "fontSize": 14,
              "fontWeight": "bold",
              "paddingHorizontal": 8,
              "paddingVertical": 12,
            },
            undefined,
          ],
          undefined,
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`[EditText] interactions web renders without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "#00000050",
            "borderBottomWidth": 0.5,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderBottomColor": "#00000050",
          "borderColor": "#00000050",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "#222222",
              "fontSize": 14,
              "fontWeight": "bold",
              "paddingVertical": 12,
            },
            undefined,
          ],
          undefined,
          Object {
            "outlineWidth": 0,
          },
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;
